--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/main.js"></script>
     <title>Wheather</title>
 </head>
-<body>
+<body class="body1">
     <div class="container d-flex justify-content-center">
     <section>
         <form action="#" name="submit_form" id="weather_form" class="form-group">
