--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </table>
     -->
     
-        <table>
+        <table id="table">
             <tr>
                 <td>
                     <section>
@@ -75,6 +75,7 @@
                     </section> 
                 </td>
                 <td>
+                    <section>
                     <div id="sky__object"></div>
                     <div id="cloud"></div>
                     <div id="bad__cloud"></div>
@@ -82,7 +83,7 @@
                     <div id="precipitation2"></div>
                     <div id="precipitation3"></div>
                     <div id="thunderbolt"></div>
-                    <div id="mist"></div>
+                    </section>
                 </td>
 
 
