--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="container d-flex justify-content-center">
     <section>
         <form action="#" name="submit_form" id="weather_form" class="form-group">
-            <label for="city">City: </label>
-            <input type="text" name="city">
+            <label for="city">City:   </label>
+            <input type="text" name="city" class="input">
             
             <label for="counrtry">Country: </label>
-            <input type="text" name="country">
+            <input type="text" name="country" class="input">
             
             <button onclick="check()" type="button" class="btn btn1">Get Wheather</button>
         </form>
